[gd_scene load_steps=41 format=3 uid="uid://c3ke0khj5cfqf"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_ifnl0"]
[ext_resource type="Texture2D" uid="uid://cbsip3s1knvhd" path="res://assets/sprites/player/fall/x-fall-1.png" id="2_dva6l"]
[ext_resource type="Texture2D" uid="uid://ddg5bpyldy8nn" path="res://assets/sprites/player/dash/x-dash-1.png" id="2_v1jlo"]
[ext_resource type="Texture2D" uid="uid://bxaci5amao16m" path="res://assets/sprites/player/dash/x-dash-2.png" id="3_bb1vr"]
[ext_resource type="Texture2D" uid="uid://tosxv2mk3t5" path="res://assets/sprites/player/idle/x-idle-1.png" id="3_yf3pj"]
[ext_resource type="Texture2D" uid="uid://b6344oubbm1iu" path="res://assets/sprites/player/idle/x-idle-2.png" id="4_typv6"]
[ext_resource type="Texture2D" uid="uid://b577fshk41qq5" path="res://assets/sprites/player/idle/x-idle-3.png" id="5_xymjb"]
[ext_resource type="Texture2D" uid="uid://pxwqhnl5qxu8" path="res://assets/sprites/player/idle/x-idle-4.png" id="6_kveqy"]
[ext_resource type="Texture2D" uid="uid://dbe027t8cfmad" path="res://assets/sprites/player/jump/x-jump-1.png" id="7_lfjlf"]
[ext_resource type="Texture2D" uid="uid://cplfa1e4bnllm" path="res://assets/sprites/player/jump/x-jump-2.png" id="8_rju7k"]
[ext_resource type="Texture2D" uid="uid://bjo5lpdjplion" path="res://assets/sprites/player/jump/x-jump-3.png" id="9_04iqy"]
[ext_resource type="Texture2D" uid="uid://xn3ebeldm2wj" path="res://assets/sprites/player/jump/x-jump-4.png" id="10_y1ya6"]
[ext_resource type="Texture2D" uid="uid://d1dtqeiapgay6" path="res://assets/sprites/player/jump/x-jump-5.png" id="11_0omhd"]
[ext_resource type="Texture2D" uid="uid://eaem7jajt1jw" path="res://assets/sprites/player/run/x-run-1.png" id="12_k2ldt"]
[ext_resource type="Texture2D" uid="uid://ounrj5k3dydh" path="res://assets/sprites/player/run/x-run-2.png" id="13_a2o2w"]
[ext_resource type="Texture2D" uid="uid://d1aivi7v1icq2" path="res://assets/sprites/player/run/x-run-3.png" id="14_x6xul"]
[ext_resource type="Texture2D" uid="uid://dohppv6mdnfpl" path="res://assets/sprites/player/run/x-run-4.png" id="15_kd3y4"]
[ext_resource type="Texture2D" uid="uid://cirebeqfkk0j4" path="res://assets/sprites/player/run/x-run-5.png" id="16_0c22f"]
[ext_resource type="Texture2D" uid="uid://cwr1kux608lm4" path="res://assets/sprites/player/run/x-run-6.png" id="17_82tp0"]
[ext_resource type="Texture2D" uid="uid://b11kwcasymdyj" path="res://assets/sprites/player/run/x-run-7.png" id="18_gfsij"]
[ext_resource type="Texture2D" uid="uid://cwca8hxlp0kgb" path="res://assets/sprites/player/run/x-run-8.png" id="19_m3s5e"]
[ext_resource type="Texture2D" uid="uid://dtctbmyehffbk" path="res://assets/sprites/player/run/x-run-9.png" id="20_mbbqj"]
[ext_resource type="Texture2D" uid="uid://dxgip7qr6r1k3" path="res://assets/sprites/player/run/x-run-10.png" id="21_apsey"]
[ext_resource type="Texture2D" uid="uid://7o2mraw4p742" path="res://assets/sprites/player/run/x-run-11.png" id="22_7o84a"]
[ext_resource type="Script" path="res://scenes/state_machine/state_machine.gd" id="23_ogc0p"]
[ext_resource type="Script" path="res://scenes/state_machine/states/movement_states/fall_state.gd" id="24_4iqht"]
[ext_resource type="Script" path="res://scenes/state_machine/states/movement_states/idle_state.gd" id="25_eo7dk"]
[ext_resource type="Script" path="res://scenes/player/player_state_input.gd" id="25_vupss"]
[ext_resource type="Script" path="res://scenes/state_machine/states/movement_states/jump_state.gd" id="26_a4oel"]
[ext_resource type="Script" path="res://scenes/state_machine/states/movement_states/move_state.gd" id="27_ly15d"]
[ext_resource type="Script" path="res://scenes/state_machine/states/movement_states/dash_state.gd" id="30_33l0y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n2po7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_n7qpj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v1jlo")
}, {
"duration": 1.0,
"texture": ExtResource("3_bb1vr")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dva6l")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yf3pj")
}, {
"duration": 1.0,
"texture": ExtResource("4_typv6")
}, {
"duration": 1.0,
"texture": ExtResource("5_xymjb")
}, {
"duration": 1.0,
"texture": ExtResource("6_kveqy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_lfjlf")
}, {
"duration": 1.0,
"texture": ExtResource("8_rju7k")
}, {
"duration": 1.0,
"texture": ExtResource("9_04iqy")
}, {
"duration": 1.0,
"texture": ExtResource("10_y1ya6")
}, {
"duration": 1.0,
"texture": ExtResource("11_0omhd")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_k2ldt")
}, {
"duration": 1.0,
"texture": ExtResource("13_a2o2w")
}, {
"duration": 1.0,
"texture": ExtResource("14_x6xul")
}, {
"duration": 1.0,
"texture": ExtResource("15_kd3y4")
}, {
"duration": 1.0,
"texture": ExtResource("16_0c22f")
}, {
"duration": 1.0,
"texture": ExtResource("17_82tp0")
}, {
"duration": 1.0,
"texture": ExtResource("18_gfsij")
}, {
"duration": 1.0,
"texture": ExtResource("19_m3s5e")
}, {
"duration": 1.0,
"texture": ExtResource("20_mbbqj")
}, {
"duration": 1.0,
"texture": ExtResource("21_apsey")
}, {
"duration": 1.0,
"texture": ExtResource("22_7o84a")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_lfedt"]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hnslh"]
resource_name = "Idle"
length = 2.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_8ybe7"]
resource_name = "Jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_5koay"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_167a6"]
resource_name = "Run"
length = 0.48
loop_mode = 1
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimations:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimations:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}

[sub_resource type="Animation" id="Animation_4bngr"]
resource_name = "Dash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dash"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ky321"]
_data = {
"Dash": SubResource("Animation_4bngr"),
"Fall": SubResource("Animation_lfedt"),
"Idle": SubResource("Animation_hnslh"),
"Jump": SubResource("Animation_8ybe7"),
"RESET": SubResource("Animation_5koay"),
"Run": SubResource("Animation_167a6")
}

[node name="Player" type="CharacterBody2D"]
position = Vector2(290, 218)
script = ExtResource("1_ifnl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_n2po7")

[node name="PlayerAnimations" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -2)
sprite_frames = SubResource("SpriteFrames_n7qpj")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ky321")
}
autoplay = "Idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("23_ogc0p")
starting_state = NodePath("Idle")

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("24_4iqht")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
animation_name = "Fall"

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("dash_state", "fall_state", "jump_state", "move_state")]
script = ExtResource("25_eo7dk")
dash_state = NodePath("../Dash")
fall_state = NodePath("../Fall")
jump_state = NodePath("../Jump")
move_state = NodePath("../Move")
animation_name = "Idle"

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state")]
script = ExtResource("26_a4oel")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
animation_name = "Jump"

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("dash_state", "fall_state", "idle_state", "jump_state")]
script = ExtResource("27_ly15d")
dash_state = NodePath("../Dash")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
animation_name = "Run"

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("move_state", "fall_state", "idle_state", "jump_state")]
script = ExtResource("30_33l0y")
move_state = NodePath("../Move")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
animation_name = "Dash"

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("25_vupss")
